5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4075/executions/1643_2445.log
== SUBMITION (2019-04-15 18:35:03) 
-- CODE:
escala= input()
valor= float(input())

c= (5/9) * (valor - 32)

celcus= round(c,2)

f=((9,5)*valor)+ 32

fara= round(f,2)

if( escala== "c"):
	print(fara)

elif (escala== "f"):
	print(celcus)
-- EXECUTION TIME:
0.16156
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 8, in <module>
    f=((9,5)*valor)+ 32
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:36:06) 
-- CODE:
escala= input()
valor= float(input())

c= (5/9) * (valor - 32)

celcus= round(c,2)

f=((9,5)*valor)+ 32

fara= round(f,2)

if( escala== 'C'):
	print(fara)

elif (escala== 'F'):
	print(celcus)
-- EXECUTION TIME:
0.136193
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 8, in <module>
    f=((9,5)*valor)+ 32
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:09) 
-- CODE:
escala= input()
valor= float(input())

c= (5/9) * (valor - 32)

celcus= round(c,2)

f=((9,5)*valor)+ 32

fara= round(f,2)

if( escala== 'C'):
	print(fara)

elif (escala== 'F'):
	print(celcus)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f=((9,5)*valor)+ 32
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:36:21) 
-- CODE:
escala= input()
valor= float(input())

c= (5/9) * (valor - 32)

celcus= round(c,2)

f=((9,5)*valor)+ 32

fara= round(f,2)

if( escala== 'C'):
	print(fara)

elif (escala== 'F'):
	print(celcus)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f=((9,5)*valor)+ 32
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:37:52) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'C'):
	print(fara)

elif (escala == 'F'):
	print(celcus)
-- EXECUTION TIME:
0.197961
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 8, in <module>
    f=((9,5)*valor) + 32
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:38:05) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'C'):
	print(fara)

elif (escala == 'F'):
	print(celcus)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f=((9,5)*valor) + 32
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:38:21) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'C'):
	print(fara)

else (escala == 'F'):
	print(celcus)
-- EXECUTION TIME:
0.118305
-- ERROR:
  File "/home/codebench/codes/1643/2445/main.py", line 15
    else (escala == 'F'):
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:38:24) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'C'):
	print(fara)

else (escala == 'F'):
	print(celcus)
-- ERROR:
File "XXXX", line 15
    else (escala == 'F'):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:38:35) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'C'):
	print(fara)

else(escala == 'F'):
	print(celcus)
-- ERROR:
File "XXXX", line 15
    else(escala == 'F'):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-15 18:38:52) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'C'):
	print(fara)

elif(escala == 'F'):
	print(celcus)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    f=((9,5)*valor) + 32
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 18:40:02) 
-- CODE:
escala = input()
valor = float(input())

c= (5/9) * (valor - 32)

celcus = round(c,2)

f=((9,5)*valor) + 32

fara= round(f,2)

if( escala == 'c'):
	print(fara)

elif (escala == 'f'):
	print(celcus)
-- EXECUTION TIME:
0.184176
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1643/2445/main.py", line 8, in <module>
    f=((9,5)*valor) + 32
TypeError: can't multiply sequence by non-int of type 'float'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
